WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72821
msup baseline is wrong
https://bugs.webkit.org/show_bug.cgi?id=72821
Summary
msup baseline is wrong
Dave Barton
Reported
2011-11-19 19:41:53 PST
Created
attachment 115972
[details]
ab^2 in MathML In Safari 5.0.6 (5533.22.3), the baseline is not aligned in ab^2: <math><mrow><mi>a</mi><msup><mi>b</mi><mn>2</mn></msup></mrow></math>
Attachments
ab^2 in MathML
(193 bytes, text/html)
2011-11-19 19:41 PST
,
Dave Barton
no flags
Details
image showing b^2 too low
(4.26 KB, image/png)
2011-11-19 20:05 PST
,
Dave Barton
no flags
Details
The baseline is wrong for <mover> also.
(71 bytes, text/html)
2011-11-20 11:45 PST
,
Dave Barton
no flags
Details
Patch
(256.92 KB, patch)
2011-12-18 18:54 PST
,
Dave Barton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Barton
Comment 1
2011-11-19 20:05:57 PST
Created
attachment 115973
[details]
image showing b^2 too low
Dave Barton
Comment 2
2011-11-20 11:45:47 PST
Created
attachment 115988
[details]
The baseline is wrong for <mover> also.
Dave Barton
Comment 3
2011-12-18 18:54:04 PST
Created
attachment 119799
[details]
Patch
WebKit Review Bot
Comment 4
2011-12-18 20:25:46 PST
Comment on
attachment 119799
[details]
Patch Clearing flags on attachment: 119799 Committed
r103213
: <
http://trac.webkit.org/changeset/103213
>
WebKit Review Bot
Comment 5
2011-12-18 20:25:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug