<msup>, <munder>, <mover>, and <munderover> baseline positions are wrong https://bugs.webkit.org/show_bug.cgi?id=72821

Patch by David Barton <dbarton@mathscribe.com> on 2011-12-18
Reviewed by Darin Adler.

Source/WebCore:

Tested by rebaselining 8 existing tests. (Pardon the pun.)

* rendering/mathml/RenderMathMLSubSup.cpp:
(WebCore::RenderMathMLSubSup::baselinePosition):
Just using the base's (these puns are not my fault) baseline did not leave room for the exponent.
* rendering/mathml/RenderMathMLUnderOver.cpp:
(WebCore::RenderMathMLUnderOver::baselinePosition):
Added a guard condition, and removed some bad lines apparently mistakenly copied from RenderMathMLSubSup.cpp.

LayoutTests:

* platform/mac/mathml/presentation/msup-base-changed-expected.png:
* platform/mac/mathml/presentation/msup-base-changed-expected.txt:
* platform/mac/mathml/presentation/msup-sup-changed-expected.png:
* platform/mac/mathml/presentation/msup-sup-changed-expected.txt:
* platform/mac/mathml/presentation/over-expected.png:
* platform/mac/mathml/presentation/over-expected.txt:
* platform/mac/mathml/presentation/roots-expected.png:
* platform/mac/mathml/presentation/roots-expected.txt:
* platform/mac/mathml/presentation/row-alignment-expected.png:
* platform/mac/mathml/presentation/row-alignment-expected.txt:
* platform/mac/mathml/presentation/sup-expected.png:
* platform/mac/mathml/presentation/sup-expected.txt:
* platform/mac/mathml/presentation/under-expected.png:
* platform/mac/mathml/presentation/under-expected.txt:
* platform/mac/mathml/presentation/underover-expected.png:
* platform/mac/mathml/presentation/underover-expected.txt:

Canonical link: https://commits.webkit.org/91577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103213 268f45cc-cd09-0410-ab3c-d52691b4dbfc